improved cluster runner