@@ -1,13 +1,15 @@
 package com.benstopford.coherence.bootstrap.structures.framework;
 
 import com.tangosol.net.*;
+import functional.fixtures.SizableObject;
 import functional.fixtures.SizableObjectFactory;
 import org.junit.After;
 import org.junit.Before;
 
-import java.io.*;
-import java.util.ArrayList;
+import java.io.File;
+import java.io.IOException;
 import java.util.HashSet;
+import java.util.Properties;
 
 /**
  * BTS, 07-Dec-2007
@@ -19,100 +21,37 @@ import java.util.HashSet;
  * http://thegridman.com/coherence/oracle-coherence-testing-with-oracle-tools/
  */
 public abstract class ClusterRunner {
-    private static final String SEPERATOR = System.getProperty("path.separator");
-    protected static final ClassLoader CLASS_LOADER = ClusterRunner.class.getClassLoader();
-    protected static final String MULTICAST_ADDRESS_1 = "239.255.12.30";
-    protected static final String CLUSTER_NAME = "com.rbs.hpc.gettingstarted";
-    protected static final String BASIC_CACHE_XML = "config/basic-cache.xml";
-    protected static final String CLUSTER_PORT = "1234";
-    protected static final String LOGGING_LEVEL = "9";
-    protected static final String TTL = "0";
+    public static final String LOCAL_STORAGE_FALSE = "-Dtangosol.coherence.distributed.localstorage=false";
 
-    private final ArrayList<Process> runningProcesses = new ArrayList<Process>();
+    private ProcessExecutor executor = new ProcessExecutor(defaultProperties());
     private HashSet<CacheService> services = new HashSet<CacheService>();
     private HashSet<NamedCache> caches = new HashSet<NamedCache>();
 
 
-
-    protected static void setDefaultProperties() {
-        System.setProperty("tangosol.coherence.clusteraddress", MULTICAST_ADDRESS_1);
-        System.setProperty("tangosol.coherence.clusterport", CLUSTER_PORT);
-        System.setProperty("tangosol.coherence.cluster", CLUSTER_NAME);
-        System.setProperty("tangosol.coherence.cacheconfig", BASIC_CACHE_XML);
-        System.setProperty("tangosol.coherence.log.level", LOGGING_LEVEL);
-        System.setProperty("tangosol.coherence.ttl", TTL);
+    protected static Properties defaultProperties() {
+        Properties properties = new Properties();
+        properties.put("tangosol.coherence.clusteraddress", "239.255.12.30");
+        properties.put("tangosol.coherence.clusterport", "1234");
+        properties.put("tangosol.coherence.cluster", "benstopford.coherence.bootstrap");
+        properties.put("tangosol.coherence.cacheconfig", "config/basic-cache.xml");
+        properties.put("tangosol.coherence.log.level", "9");
+        properties.put("tangosol.coherence.ttl", "0");
+        properties.put("tangosol.coherence.management", "all");
+        properties.put("tangosol.coherence.management.remote", "true");
+        return properties;
     }
-
-    protected Process startOutOfProcess(String config) {
-        return startOutOfProcess(config, "", "");
-    }
-
-    protected Process startOutOfProcess(String config, String classPathAdditions, String propertiesAdditions) {
-        Process process = null;
-        try {
-            String command = "java -Xms64m -Xmx128m -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails " +
-                    "-Dtangosol.coherence.cacheconfig=" + config + " " +
-                    "-Dcom.benstopford.extend.port=" + System.getProperty("com.benstopford.extend.port") + " " +
-                    "-Dcom.benstopford.extend.port2=" + System.getProperty("com.benstopford.extend.port2") + " "
-                    + getCoherenceJMXProperties() + " " +
-                    propertiesAdditions + " " +
-                    "-cp classes" + SEPERATOR + "lib/coherence-utils.jar" + SEPERATOR + "config" +
-                    classPathAdditions + SEPERATOR + parse(System.getProperty("java.class.path")) + " " +
-                    "com.tangosol.net.DefaultCacheServer";
-
-            process = Runtime.getRuntime().exec(command);
-
-            new ProcessLogger(process);
-
-            checkForSuccesfulStart(command, process);
-
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-
-        return process;
-    }
-
-    private String parse(String property) {
-        //intelij adds crap onto the classpath :(
-        String[] split = property.split(" ");
-        String found = "";
-        for (String s : split) {
-            if (s.contains("coherence")) { //hack to identify the actual entry for the classpath
-                found = s;
-            }
-        }
-
-        return found;
-    }
-
-    private void checkForSuccesfulStart(String command, Process process) throws InterruptedException {
-        try {
-            process.exitValue();
-            throw new RuntimeException("Cache server is not running " + command);
-        } catch (Exception hopedFor) {
-        }
-        runningProcesses.add(process);
-        Thread.sleep(5000);
-    }
-
 
     @Before
     public void setUp() throws Exception {
         deleteContentsOfLogDir();
-        pushCoherenceStdErrLoggingToFile();
-        new PersistentPortTracker().incrementExtendPort();
-        setDefaultProperties();
-    }
-
-    public void pushCoherenceStdErrLoggingToFile() {
         ProcessLogger.switchStdErrToFile();
+        new PersistentPortTracker().incrementExtendPort();
+        System.getProperties().putAll(defaultProperties());
     }
-
 
     private void deleteContentsOfLogDir() {
         File logDir = new File("log");
-        if(!logDir.exists()){
+        if (!logDir.exists()) {
             logDir.mkdir();
         }
 
@@ -130,7 +69,7 @@ public abstract class ClusterRunner {
         releaseLocalCacheResources();
         CacheFactory.getCluster().shutdown();
         CacheFactory.shutdown();
-        killOpenCoherenceProcesses();
+        executor.killOpenCoherenceProcesses();
         waitForAllKilledMembersToTimeOut();
     }
 
@@ -139,24 +78,6 @@ public abstract class ClusterRunner {
             System.out.println("Waiting for " + CacheFactory.ensureCluster().getMemberSet().size() + " active cluster members to be deregistered");
             System.out.println(CacheFactory.ensureCluster().getMemberSet());
             Thread.sleep(1000);
-        }
-    }
-
-    private void killOpenCoherenceProcesses() {
-        for (Process process : runningProcesses) {
-            process.destroy();
-            while (true) {
-                try {
-                    process.exitValue();
-                    break;
-                } catch (IllegalThreadStateException mustStillBeRunning) {
-                    try {
-                        Thread.sleep(10);
-                    } catch (InterruptedException e) {
-                        e.printStackTrace();
-                    }
-                }
-            }
         }
     }
 
@@ -175,21 +96,15 @@ public abstract class ClusterRunner {
     }
 
     protected NamedCache getBasicCache(String name) {
-        return getCache(BASIC_CACHE_XML, name);
+        return getCache("config/basic-cache.xml", name);
     }
 
     protected void startOutOfProcessWithJMX(String config) {
-        startOutOfProcess(config, "", getJMXProperties(3000));
+        executor.startOutOfProcess(config, getJMXProperties(3000));
     }
 
     private static String getJMXProperties(int jmx_port) {
         return getSunJMXProperties(jmx_port);
-    }
-
-    private static String getCoherenceJMXProperties() {
-        return "" +
-                "-Dtangosol.coherence.management=all " +
-                "-Dtangosol.coherence.management.remote=true";
     }
 
     private static String getSunJMXProperties(int jmx_port) {
@@ -202,41 +117,59 @@ public abstract class ClusterRunner {
 
 
     static int prefix = 0;
+
     protected void addData(NamedCache cache, int mbToAdd) {
         prefix++;
         for (int i = 0; i < mbToAdd; i++) {
-            cache.put(prefix + Integer.toString(i), new SizableObjectFactory().buildObject(1000));
+            SizableObject sizableObject = new SizableObjectFactory().buildObject(1000);
+            cache.put(prefix + Integer.toString(i), sizableObject);
         }
         System.out.println("added " + mbToAdd + "MB");
     }
 
     protected NamedCache getRemoteCache() {
-        return new DefaultConfigurableCacheFactory("config/extend-client-32001.xml").ensureCache("foo", getClass().getClassLoader());
+        return getRemoteCache("foo");
+    }
+
+    protected NamedCache getRemoteCache(String name) {
+        return new DefaultConfigurableCacheFactory("config/extend-client-32001.xml").ensureCache(name, getClass().getClassLoader());
     }
 
     protected void startBasicCacheProcess() throws IOException, InterruptedException {
-        startOutOfProcess("config/basic-cache.xml", "", "");
+        executor.startOutOfProcess("config/basic-cache.xml", "");
     }
 
-    protected void startBasicCacheProcessWithJMX() throws IOException, InterruptedException {
-        startOutOfProcess("config/basic-cache.xml", "", getJMXProperties(3000));
+    protected void startBasicCacheProcessWithJMX(int port) throws IOException, InterruptedException {
+        executor.startOutOfProcess("config/basic-cache.xml", getJMXProperties(port));
+    }
+
+    protected void startBasicCacheProcessWithJMX(String config, int port) throws IOException, InterruptedException {
+        executor.startOutOfProcess(config, getJMXProperties(port));
     }
 
     protected void startDataDisabledExtendProxy() throws IOException, InterruptedException {
-        startOutOfProcess("config/basic-extend-enabled-cache-32001.xml", "", "-Dtangosol.coherence.distributed.localstorage=false");
+        executor.startOutOfProcess("config/basic-extend-enabled-cache-32001.xml", LOCAL_STORAGE_FALSE);
     }
+
+    protected Process startCoherenceProcess(String config) {
+        return executor.startOutOfProcess(config, "");
+    }
+
+    protected Process startCoherenceProcess(String config, String properties) {
+        return executor.startOutOfProcess(config, properties);
+    }
+
 
     protected void startExtendEnabledDataNode(boolean enableJMX, String config) throws IOException, InterruptedException {
         String jmxProps = "";
         if (enableJMX) {
             jmxProps = getJMXProperties(3000);
         }
-        startOutOfProcess(config, "", jmxProps);
+        executor.startOutOfProcess(config, jmxProps);
     }
 
-    protected void addToShutdownList(NamedCache cache) {
-        services.add(cache.getCacheService());
-        caches.add(cache);
+    protected NamedCache cacheViaExtend() {
+        return getCache("config/extend-client-32001.xml", "foo");
     }
 
     protected NamedCache getCache(String configLocation, String cacheName) {
@@ -247,20 +180,12 @@ public abstract class ClusterRunner {
         return cache;
     }
 
-    protected NamedCache connectOverExtend() {
-        return getCache("config/extend-client-32001.xml", "foo");
+    private void addToShutdownList(NamedCache cache) {
+        services.add(cache.getCacheService());
+        caches.add(cache);
     }
 
-    private long start = 0;
-
-    protected void startTimer() {
-        start = System.currentTimeMillis();
+    protected NamedCache getRemotePofCache(String name) {
+        return new DefaultConfigurableCacheFactory("config/extend-client-32001-pof.xml").ensureCache(name, getClass().getClassLoader());
     }
-
-    protected long took() {
-        long took = System.currentTimeMillis() - start;
-        start = 0;
-        return took;
-    }
-
 }
